feat: Add numerous new templates and refactor CSS into component and template-specific directories, updating existing components and scripts.

--- a/assets/layout/footer.html
+++ b/assets/layout/footer.html
@@ -12,14 +12,14 @@
         <h4>Product</h4>
         <ul>
           <li><a href="/components.html">Components</a></li>
-          <li><a href="/docs.html">Documentation</a></li>
+          <li><a href="/template.html">Templates</a></li>
           <li><a href="#">Changelog</a></li>
         </ul>
       </div>
       <div class="footer-links">
         <h4>Resources</h4>
         <ul>
-          <li><a href="/docs.html">Getting Started</a></li>
+          <li><a href="/template.html">Getting Started</a></li>
           <li><a href="#">Examples</a></li>
           <li><a href="#">Blog</a></li>
         </ul>
