--- a/components/alert.html
+++ b/components/alert.html
@@ -7,7 +7,7 @@
     <meta name="description" content="KvoLib Alert Components" />
     <title>Alert - KvoLib</title>
     <script src="/assets/js/head-loader.js"></script>
-    <link rel="stylesheet" href="/assets/css/alert.css" />
+    <link rel="stylesheet" href="/assets/css/components/alert.css" />
   </head>
   <body>
         <script src="/assets/js/navbar-loader.js"></script>
