--- a/components/breadcrumb.html
+++ b/components/breadcrumb.html
@@ -7,7 +7,7 @@
     <meta name="description" content="KvoLib Breadcrumb Components" />
     <title>Breadcrumb - KvoLib</title>
     <script src="/assets/js/head-loader.js"></script>
-    <link rel="stylesheet" href="/assets/css/breadcrumb.css" />
+    <link rel="stylesheet" href="/assets/css/components/breadcrumb.css" />
   </head>
   <body>
         <script src="/assets/js/navbar-loader.js"></script>
