--- a/components/checkbox.html
+++ b/components/checkbox.html
@@ -7,7 +7,7 @@
     <meta name="description" content="KvoLib Checkbox Components" />
     <title>Checkboxes - KvoLib</title>
     <script src="/assets/js/head-loader.js"></script>
-    <link rel="stylesheet" href="/assets/css/checkbox.css" />
+    <link rel="stylesheet" href="/assets/css/components/checkbox.css" />
   </head>
   <body>
         <script src="/assets/js/navbar-loader.js"></script>
