--- a/components/container.html
+++ b/components/container.html
@@ -7,7 +7,7 @@
     <meta name="description" content="KvoLib Container Components" />
     <title>Container - KvoLib</title>
     <script src="/assets/js/head-loader.js"></script>
-    <link rel="stylesheet" href="/assets/css/container.css" />
+    <link rel="stylesheet" href="/assets/css/components/container.css" />
   </head>
   <body>
         <script src="/assets/js/navbar-loader.js"></script>
