--- a/components/divider.html
+++ b/components/divider.html
@@ -7,7 +7,7 @@
     <meta name="description" content="KvoLib Divider Components" />
     <title>Divider - KvoLib</title>
     <script src="/assets/js/head-loader.js"></script>
-    <link rel="stylesheet" href="/assets/css/divider.css" />
+    <link rel="stylesheet" href="/assets/css/components/divider.css" />
   </head>
   <body>
         <script src="/assets/js/navbar-loader.js"></script>
