--- a/components/grid.html
+++ b/components/grid.html
@@ -7,7 +7,7 @@
     <meta name="description" content="KvoLib Grid Components" />
     <title>Grid - KvoLib</title>
     <script src="/assets/js/head-loader.js"></script>
-    <link rel="stylesheet" href="/assets/css/grid.css" />
+    <link rel="stylesheet" href="/assets/css/components/grid.css" />
   </head>
   <body>
         <script src="/assets/js/navbar-loader.js"></script>
