--- a/components/link.html
+++ b/components/link.html
@@ -7,7 +7,7 @@
     <meta name="description" content="KvoLib Link Components" />
     <title>Link - KvoLib</title>
     <script src="/assets/js/head-loader.js"></script>
-    <link rel="stylesheet" href="/assets/css/link.css" />
+    <link rel="stylesheet" href="/assets/css/components/link.css" />
   </head>
   <body>
         <script src="/assets/js/navbar-loader.js"></script>
