--- a/components/navbar.html
+++ b/components/navbar.html
@@ -7,7 +7,7 @@
     <meta name="description" content="KvoLib Navbar Components" />
     <title>Navbar - KvoLib</title>
     <script src="/assets/js/head-loader.js"></script>
-    <link rel="stylesheet" href="/assets/css/navbar.css" />
+    <link rel="stylesheet" href="/assets/css/components/navbar.css" />
   </head>
   <body>
         <script src="/assets/js/navbar-loader.js"></script>
