--- a/components/pagination.html
+++ b/components/pagination.html
@@ -7,7 +7,7 @@
     <meta name="description" content="KvoLib Pagination Components" />
     <title>Pagination - KvoLib</title>
     <script src="/assets/js/head-loader.js"></script>
-    <link rel="stylesheet" href="/assets/css/pagination.css" />
+    <link rel="stylesheet" href="/assets/css/components/pagination.css" />
   </head>
   <body>
         <script src="/assets/js/navbar-loader.js"></script>
