--- a/components/progress.html
+++ b/components/progress.html
@@ -7,7 +7,7 @@
     <meta name="description" content="KvoLib Progress Components" />
     <title>Progress - KvoLib</title>
     <script src="/assets/js/head-loader.js"></script>
-    <link rel="stylesheet" href="/assets/css/progress.css" />
+    <link rel="stylesheet" href="/assets/css/components/progress.css" />
   </head>
   <body>
         <script src="/assets/js/navbar-loader.js"></script>
