--- a/components/radio.html
+++ b/components/radio.html
@@ -7,7 +7,7 @@
     <meta name="description" content="KvoLib Radio Components" />
     <title>Radio Buttons - KvoLib</title>
     <script src="/assets/js/head-loader.js"></script>
-    <link rel="stylesheet" href="/assets/css/radio.css" />
+    <link rel="stylesheet" href="/assets/css/components/radio.css" />
   </head>
   <body>
         <script src="/assets/js/navbar-loader.js"></script>
