--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -7,7 +7,7 @@
     <meta name="description" content="KvoLib Sidebar Components" />
     <title>Sidebar - KvoLib</title>
     <script src="/assets/js/head-loader.js"></script>
-    <link rel="stylesheet" href="/assets/css/sidebar.css" />
+    <link rel="stylesheet" href="/assets/css/components/sidebar.css" />
   </head>
   <body>
         <script src="/assets/js/navbar-loader.js"></script>
