--- a/components/skeleton.html
+++ b/components/skeleton.html
@@ -7,7 +7,7 @@
     <meta name="description" content="KvoLib Skeleton Components" />
     <title>Skeleton - KvoLib</title>
     <script src="/assets/js/head-loader.js"></script>
-    <link rel="stylesheet" href="/assets/css/skeleton.css" />
+    <link rel="stylesheet" href="/assets/css/components/skeleton.css" />
   </head>
   <body>
         <script src="/assets/js/navbar-loader.js"></script>
