--- a/components/spacer.html
+++ b/components/spacer.html
@@ -7,7 +7,7 @@
     <meta name="description" content="KvoLib Spacer Components" />
     <title>Spacer - KvoLib</title>
     <script src="/assets/js/head-loader.js"></script>
-    <link rel="stylesheet" href="/assets/css/spacer.css" />
+    <link rel="stylesheet" href="/assets/css/components/spacer.css" />
   </head>
   <body>
         <script src="/assets/js/navbar-loader.js"></script>
