--- a/components/spinner.html
+++ b/components/spinner.html
@@ -7,7 +7,7 @@
     <meta name="description" content="KvoLib Spinner Components" />
     <title>Spinner - KvoLib</title>
     <script src="/assets/js/head-loader.js"></script>
-    <link rel="stylesheet" href="/assets/css/spinner.css" />
+    <link rel="stylesheet" href="/assets/css/components/spinner.css" />
   </head>
   <body>
         <script src="/assets/js/navbar-loader.js"></script>
