--- a/components/tabs.html
+++ b/components/tabs.html
@@ -7,7 +7,7 @@
     <meta name="description" content="KvoLib Tabs Components" />
     <title>Tabs - KvoLib</title>
     <script src="/assets/js/head-loader.js"></script>
-    <link rel="stylesheet" href="/assets/css/tabs.css" />
+    <link rel="stylesheet" href="/assets/css/components/tabs.css" />
   </head>
   <body>
         <script src="/assets/js/navbar-loader.js"></script>
