--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -800,7 +800,7 @@ body {
 
 .docs-section {
   margin-bottom: 64px;
-  scroll-margin-top: 100px; /* Offset untuk navbar */
+  scroll-margin-top: 120px;
 }
 
 .docs-section:last-child {
