--- a/assets/layout/navbar.html
+++ b/assets/layout/navbar.html
@@ -18,7 +18,7 @@
     <div class="nav-links">
       <a href="/" class="nav-link">Home</a>
       <a href="/components.html" class="nav-link">Components</a>
-      <a href="/docs.html" class="nav-link">Docs</a>
+      <a href="/template.html" class="nav-link">Templates</a>
       <a
         href="https://github.com/Kvoryz/KvoLib"
         target="_blank"
