--- a/components/buttons.html
+++ b/components/buttons.html
@@ -9,7 +9,7 @@
     <title>Buttons - KvoLib</title>
 
     <script src="/assets/js/head-loader.js"></script>
-    <link rel="stylesheet" href="/assets/css/buttons.css" />
+    <link rel="stylesheet" href="/assets/css/components/buttons.css" />
   </head>
   <body>
         <script src="/assets/js/navbar-loader.js"></script>
