--- a/components/forms.html
+++ b/components/forms.html
@@ -9,7 +9,7 @@
     <title>Forms - KvoLib</title>
 
     <script src="/assets/js/head-loader.js"></script>
-    <link rel="stylesheet" href="/assets/css/forms.css" />
+    <link rel="stylesheet" href="/assets/css/components/forms.css" />
   </head>
   <body>
         <script src="/assets/js/navbar-loader.js"></script>
