--- a/components/modal.html
+++ b/components/modal.html
@@ -7,7 +7,7 @@
     <meta name="description" content="KvoLib Modal Components" />
     <title>Modal - KvoLib</title>
     <script src="/assets/js/head-loader.js"></script>
-    <link rel="stylesheet" href="/assets/css/modal.css" />
+    <link rel="stylesheet" href="/assets/css/components/modal.css" />
   </head>
   <body>
         <script src="/assets/js/navbar-loader.js"></script>
