--- a/components/select.html
+++ b/components/select.html
@@ -7,7 +7,7 @@
     <meta name="description" content="KvoLib Select Components" />
     <title>Select Dropdowns - KvoLib</title>
     <script src="/assets/js/head-loader.js"></script>
-    <link rel="stylesheet" href="/assets/css/select.css" />
+    <link rel="stylesheet" href="/assets/css/components/select.css" />
   </head>
   <body>
         <script src="/assets/js/navbar-loader.js"></script>
