--- a/components/stack.html
+++ b/components/stack.html
@@ -7,7 +7,7 @@
     <meta name="description" content="KvoLib Stack Components" />
     <title>Stack - KvoLib</title>
     <script src="/assets/js/head-loader.js"></script>
-    <link rel="stylesheet" href="/assets/css/stack.css" />
+    <link rel="stylesheet" href="/assets/css/components/stack.css" />
   </head>
   <body>
         <script src="/assets/js/navbar-loader.js"></script>
