--- a/components/switch.html
+++ b/components/switch.html
@@ -7,7 +7,7 @@
     <meta name="description" content="KvoLib Switch Components" />
     <title>Switches - KvoLib</title>
     <script src="/assets/js/head-loader.js"></script>
-    <link rel="stylesheet" href="/assets/css/switch.css" />
+    <link rel="stylesheet" href="/assets/css/components/switch.css" />
   </head>
   <body>
         <script src="/assets/js/navbar-loader.js"></script>
